k8s/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sveltos-webhook
  name: webhook-service
  namespace: projectsveltos
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: sveltos-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: project
    app: sveltos-webhook
  name: conversion-webhook
  namespace: projectsveltos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sveltos-webhook
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: sveltos-webhook
      labels:
        app: sveltos-webhook
    spec:
      containers:
      - command:
        - /conversion-webhook
        image: docker.io/projectsveltos/webhook-conversion:v0.37.0
        name: sveltos-webhook
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP          
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: healthz
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: healthz
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10          
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: default
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: projectsveltos/projectsveltos-serving-cert
  labels:
    app.kubernetes.io/name: sveltos-webhook
  name: projectsveltos-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1alpha1
  clientConfig:
    service:
      name: webhook-service
      namespace: projectsveltos
      path: /mutate-projectsveltos-v1beta1-clusterprofile
  failurePolicy: Fail
  name: mclusterprofile.projectsveltos.io
  sideEffects: None
---
